Fix button alignment

--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -34,11 +34,6 @@
       text-align: center;
     }
 
-    @include mixins.phone {
-      font-size: math.div($base-size, 5.6) * 3.5;
-      line-height: 1.5;
-    }
-
     @include mixins.phone-small {
       font-size: math.div($base-size, 5.6) * 2.8;
     }
@@ -54,7 +49,11 @@
 
   .hero-cta {
     display: flex;
-    justify-content: center;
+    justify-content: start;
+
+    @include mixins.tablet-portrait {
+      justify-content: center;
+    }
 
     & a {
       font-size: 2.4rem;
